--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
         </div>
         <div class="logo">
-            <img src="file:///O:/AMAP_SHOPPING-removebg-preview.png" alt="AMAP Shopping Logo">
+            <img src="AMAP_SHOPPING-removebg-preview.png" alt="AMAP Shopping Logo">
         </div>
     </div>
     <div class="container">
@@ -179,9 +179,9 @@
         <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/Map.html" class="button">Get Started</a>
     </div>
     <div class="image-cycle">
-        <img src="file:///O:/Collection-Perfection-Deal-Banne.jpg" alt="KFC">
-        <img src="file:///O:/Untitled%20design%20(7).png" alt="BurkerKing">
-        <img src="file:///O:/Untitled%20design%20(5).png" alt="Costa">
+        <img src="Collection-Perfection-Deal-Banne.jpg" alt="KFC">
+        <img src="Untitled design (7).png" alt="BurkerKing">
+        <img src="Untitled design (5).png" alt="Costa">
     </div>
 
 <center>
