--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
             <div class="menu-item dropdown">
                 <a href="#">Menu</a>
                 <div class="dropdown-content">
-                    <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/mainpagetest.html#">Home</a>
-                    <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/parking.html">Parking</a>
-                    <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/Map.html">Map</a>
-                    <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/Map.html">Shopping</a>
-                    <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/banks.html">Banks</a>
-                    <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/specialoffers.html">Food</a>
-                    <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/specialoffers.html">Special Offers</a>
-                    <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/help.html">Help</a>
+                    <a href="https://caamzo.github.io/mainpage.github.io/">Home</a>
+                    <a href="https://caamzo.github.io/parking.github.io/">Parking</a>
+                    <a href="https://caamzo.github.io/map.github.io/">Map</a>
+                    <a href="https://caamzo.github.io/map.github.io/">Shopping</a>
+                    <a href="https://caamzo.github.io/bank.github.io/">Banks</a>
+                    <a href="https://caamzo.github.io/specialoffers.github.io/">Food</a>
+                    <a href="https://caamzo.github.io/specialoffers.github.io/">Special Offers</a>
+                    <a href="https://caamzo.github.io/help.github.io/">Help</a>
                 </div>
             </div>
         </div>
@@ -176,7 +176,7 @@
     <div class="container">
         <h1>Welcome to AMAP Shopping Information Totem</h1>
         <p>Explore the latest updates, promotions, and information about AMAP Shopping.</p>
-        <a href="file:///O:/A%202023/Unit%2010/hci%20test%20website/Map.html" class="button">Get Started</a>
+        <a href="https://caamzo.github.io/mainpage.github.io/" class="button">Get Started</a>
     </div>
     <div class="image-cycle">
         <img src="Collection-Perfection-Deal-Banne.jpg" alt="KFC">
